# guitar-practice-app

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage-badge.yml
guitar/: chords.py  db.py  ear.py  exercises.py  fretboard.py  main.py  quiz.py  renderer.py  routine.py  scales.py  theory.py  timer.py
guitar/data/: routines.toml
tests/: conftest.py  test_chords.py  test_db.py  test_ear.py  test_exercises.py  test_fretboard.py  test_quiz.py  test_routine.py  test_runners.py  test_scales.py  test_theory.py  test_timer.py
