[project]
name = "guitar-practice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
guitar = "guitar.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anybadge>=1.9",
    "mypy>=1.0",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[tool.coverage.run]
omit = ["guitar/main.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["guitar"]
